[package]
name = "clankers"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
futures = "0.3.31"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-jsonlines = { version = "0.5.0", features = ["async"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
